Fri Oct 14 18:40:59 1994  Gray Watson  (gray at toaster.antaire.com)

	* Fixed dumb errors with FUNC_CHECK code.  Thanks Dave.

Thu Oct 13 21:25:52 1994  Gray Watson  (gray@blender.antaire.com)

	* Added default tags: default,low,medium,high,all to dmalloc.

	* Renamed check-free to check-blank but left free for compat.

	* Made a number of changes from Dave MacKenzie.  Thanks Dave!
	Reworking the manual fixed the Makefile, RC file, argv, etc...

Wed Oct 12 13:00:48 1994  Gray Watson  (gray@blender.antaire.com)

	* Added long/short options to dmalloc and env routines.

	* Changed some dmalloc options.  -T -> -D, -L -> -t.  Yeach!

	* Added better error logging in chunk.

Tue Oct  4 13:39:40 1994  Gray Watson  (gray at toaster.antaire.com)

	* Added DG/UX code to return.h and atexit code and notes to the
	distribution.  Thanks Joerg.

Mon Sep 26 11:59:56 1994  Gray Watson  (gray@blender.antaire.com)

	* Releasing version 3.0.2.

	* Fixed stupid strtok error in dmallocrc file processing.

Mon Sep 26 11:20:17 1994  Gray Watson  (gray at toaster.antaire.com)

	* Fixed problems with env code and that sprintf returning (char *)
	on some archs.  DUMB!

Wed Sep 21 11:45:19 1994  Gray Watson  (gray at toaster.antaire.com)

	* Library now dumps the proper fence-bottom bytes on first pointer
	error.

	* Fixed 2 casting problems on OSF.  Thanks Dave.

Tue Sep 20 13:58:08 1994  Gray Watson  (gray@blender.antaire.com)

	* Releasing version 3.0.1.

	* Combined all env variables into DMALLOC_OPTIONS.  Lots of
	changes to dmalloc program.

Fri Sep 16 14:50:26 1994  Gray Watson  (gray@blender.antaire.com)

	* Added short token strings and values to -T very-verbose output.

	* Added -n flag to dmalloc program for printing/not-doing actions.

Tue Sep 13 11:36:10 1994  Gray Watson  (gray@toaster.antaire.com)

	* Added mkinstalldirs to distribution per feedback from Francois.

Mon Sep 12 13:12:38 1994  Gray Watson  (gray@blender.antaire.com)
